Feat: Adding examples of terraform and configuration files with appropriate gitignore to

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ __pycache__/
 *.pyc
 venv/
 .env
+config.env
+
+# Conda environments
+infobip/
 
 # IDE
 .vscode/
@@ -14,6 +18,9 @@ venv/
 # AWS
 *.pem
 *.key
+
+# Terraform
+terraform.tfvars
 
 # Logs
 *.log
