--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ infobip/
 *.key
 
 # Terraform
-terraform.tfvars
-terraform.tfvars.json
+*.tfvars
+*.tfvars.json
 *.tfstate
 *.tfstate.*
 .terraform/
