--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy>=1.21.0
 boto3>=1.26.0
 faker>=18.0.0
 python-dotenv>=1.0.0
+psycopg2-binary>=2.9.0
 
 # Development dependencies
 black>=23.0.0
