--- a/infrastructure/analytics/terraform/terraform.tfvars.example
+++ b/infrastructure/analytics/terraform/terraform.tfvars.example
@@ -1,28 +1,20 @@
-# Example Terraform variables file for analytics infrastructure
-# Copy this file to terraform.tfvars and update with your actual values
+# Analytics Infrastructure Terraform Variables
+# Copy this file to terraform.tfvars and update the values
+# These values come from Base Infrastructure outputs
 
-aws_region = "us-east-1"
-project_name = "infobip-task"
+# General configuration
+aws_region   = "eu-north-1"
+project_name = "data-engineering-task"
+environment  = "dev"
 
-# ARN of the S3 bucket containing your data files (customers.csv, traffic.csv, channels.csv)
-# This should be the bucket created by your base infrastructure
-data_bucket_arn = "arn:aws:s3:::your-data-bucket-name"
-data_bucket_name = "your-data-bucket-name"
-
-# RDS connection details
-rds_endpoint = "your-rds-endpoint.amazonaws.com"
-rds_database_name = "infobip_db"
-rds_username = "postgres"
-rds_password = "your-secure-password"
+# S3 and Database (from Base Infrastructure)
+data_bucket_arn      = "arn:aws:s3:::your-project-data-bucket"
+data_bucket_name     = "your-project-data-bucket"
+rds_endpoint        = "your-rds-endpoint.region.rds.amazonaws.com"
+rds_database_name   = "your_database_name"
+rds_username        = "your_db_username"
+rds_password        = "your_secure_password"
 
 # Glue job configuration
 glue_max_capacity = 2
-glue_timeout = 60
-
-# Tags for all resources
-tags = {
-  Project     = "infobip-task"
-  Environment = "production"
-  ManagedBy   = "terraform"
-  Component   = "analytics"
-}
+glue_timeout      = 60
